# Libellus

./: README.md  de.hummdudel.Libellus.json  example.item  index.html  io.github.qwertzuiopy.Libellus.json  io.github.qwertzuiopy.Questscribe.flatpak  io.github.qwertzuiopy.Questscribe.json  meson.build  screenshots_combined.xcf
.flatpak-builder/cache/refs/heads/x86_64-de.hummdudel.Libellus.json/: init
.flatpak-builder/cache/refs/heads/x86_64-io.github.qwertzuiopy.Libellus.json/: init
.flatpak-builder/cache/refs/heads/x86_64-io.github.qwertzuiopy.Questscribe.json/: init
.flatpak-builder/checksums/: x86_64-de.hummdudel.Libellus.json  x86_64-io.github.qwertzuiopy.Libellus.json  x86_64-io.github.qwertzuiopy.Questscribe.json
data/: de.hummdudel.Libellus.appdata.xml.in  de.hummdudel.Libellus.desktop.in  de.hummdudel.Libellus.gschema.xml  de.hummdudel.Libellus.metainfo.xml.in  de.hummdudel.Libellus.service.in  io.github.qwertzuiopy.Libellus.appdata.xml.in  io.github.qwertzuiopy.Libellus.desktop.in  io.github.qwertzuiopy.Libellus.gschema.xml  io.github.qwertzuiopy.Questscribe.appdata.xml.in  io.github.qwertzuiopy.Questscribe.desktop.in  io.github.qwertzuiopy.Questscribe.gschema.xml  meson.build
data/config/: meson.build  sources.in
data/config/data/dnd/: bookmarks  dir  filter
data/config/data/dnd/data/: acrobatics  animal-handling  api-2014-classes-sorcerer  api-2014-classes-warlock  api-2014-equipment-abacus  api-2014-equipment-alchemists-fire-flask  api-2014-equipment-alchemists-supplies  api-2014-equipment-amulet  api-2014-equipment-backpack  api-2014-equipment-ball-bearings-bag-of-1000  api-2014-equipment-barding-breastplate  api-2014-equipment-barding-chain-shirt  api-2014-equipment-barding-ring-mail  api-2014-equipment-barding-studded-leather  api-2014-equipment-basket  api-2014-equipment-bell  api-2014-equipment-blanket  api-2014-equipment-block-and-tackle  api-2014-equipment-blowgun-needle  api-2014-equipment-bottle-glass  api-2014-equipment-brewers-supplies  api-2014-equipment-camel  api-2014-equipment-candle  api-2014-equipment-cart  api-2014-equipment-case-map-or-scroll  api-2014-equipment-chain-10-feet  api-2014-equipment-chain-shirt  api-2014-equipment-chalk-1-piece  api-2014-equipment-chariot  api-2014-equipment-chest  api-2014-equipment-clothes-costume  api-2014-equipment-clothes-fine  api-2014-equipment-clothes-travelers  api-2014-equipment-club  api-2014-equipment-cobblers-tools  api-2014-equipment-component-pouch  api-2014-equipment-cooks-utensils  api-2014-equipment-crossbow-hand  api-2014-equipment-crowbar  api-2014-equipment-dart  (+2113 more)
data/dnd/: desc  dir  filter
data/dnd/data/: api-2014-ability-scores-cha  api-2014-ability-scores-con  api-2014-ability-scores-dex  api-2014-ability-scores-int  api-2014-ability-scores-str  api-2014-ability-scores-wis  api-2014-classes-barbarian  api-2014-classes-bard  api-2014-classes-cleric  api-2014-classes-druid  api-2014-classes-fighter  api-2014-classes-monk  api-2014-classes-paladin  api-2014-classes-ranger  api-2014-classes-rogue  api-2014-classes-wizard  api-2014-equipment-acid-vial  api-2014-equipment-alms-box  api-2014-equipment-animal-feed-1-day  api-2014-equipment-antitoxin-vial  api-2014-equipment-arrow  api-2014-equipment-bagpipes  api-2014-equipment-barding-chain-mail  api-2014-equipment-barding-half-plate  api-2014-equipment-barding-hide  api-2014-equipment-barding-leather  api-2014-equipment-barding-padded  api-2014-equipment-barding-plate  api-2014-equipment-barding-scale-mail  api-2014-equipment-barding-splint  api-2014-equipment-barrel  api-2014-equipment-battleaxe  api-2014-equipment-bedroll  api-2014-equipment-bit-and-bridle  api-2014-equipment-block-of-incense  api-2014-equipment-blowgun  api-2014-equipment-book  api-2014-equipment-breastplate  api-2014-equipment-bucket  api-2014-equipment-burglars-pack  (+885 more)
data/icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build  pt_BR.po
sample/: bookmarks  data  dir  filter  format
sample/data/: acid_splash  adult_black_dragon  fireball
src/: api.js  api_pf2e.js  application.vala  bookmarkmenu.vala  character_sheet.js  config.vala  data.vala  data_builder.js  dbus.js  de.hummdudel.Libellus.data.gresource.xml  de.hummdudel.Libellus.src.gresource.xml  de.hummdudel.Libellus.xml  dnd.js  filter.js  filter_dialog.blp  filter_dialog.ui  filter_dialog.vala  filter_page.blp  filter_page.ui  filter_row.ui  io.github.qwertzuiopy.Libellus.src.gresource.xml  io.github.qwertzuiopy.Libellus.xml  io.github.qwertzuiopy.Questscribe.data.gresource.xml  io.github.qwertzuiopy.Questscribe.src.gresource.xml  libellus.gresource.xml  main.js  main.vala  meson.build  modules.js  modules.vala  page.blp  pf2e.js  results.js  search_page.blp  searchpage.vala  shortcuts-dialog.blp  shortcuts-dialog.ui  source.js  source_dialog.ui  source_row.ui  (+9 more)
src/gtk/: help-overlay.ui
src/modules/: title.blp
